<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll"
                tools:context=".ui.HomeActivity">

              <LinearLayout
                  android:gravity="center"
                  android:layout_marginStart="@dimen/_15sdp"
                  android:layout_marginTop="@dimen/_20sdp"
                  android:layout_marginEnd="@dimen/_15sdp"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

                  <androidx.appcompat.widget.AppCompatTextView
                      android:layout_weight="1"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:text="@string/home"
                      android:textAppearance="@style/TextStyleBold"
                      android:textColor="?colorOnBackground"
                      android:textSize="@dimen/_17sdp" />

                  <androidx.appcompat.widget.AppCompatImageView
                      android:id="@+id/ivSearch"
                      android:tint="?colorOnBackground"
                      android:padding="@dimen/_5sdp"
                      android:background="@drawable/click_ripple_effect"
                      app:srcCompat="@drawable/search"
                      android:layout_width="@dimen/_30sdp"
                      android:layout_height="@dimen/_30sdp"/>

              </LinearLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/vpMovies"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_170sdp"
                    android:layout_marginTop="@dimen/_12sdp" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/indicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    app:dotsColor="#D1D1D1"
                    app:dotsCornerRadius="@dimen/_2sdp"
                    app:dotsSize="@dimen/_5sdp"
                    app:dotsSpacing="@dimen/_2sdp"
                    app:dotsWidthFactor="4.5"
                    app:selectedDotColor="?colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/trending"
                        android:textAppearance="@style/TextStyleBold"
                        android:textColor="?colorOnBackground"
                        android:textSize="@dimen/_17sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSeeAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@string/see_all"
                        android:textAppearance="@style/TextStyleMedium"
                        android:textColor="?colorSecondary"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/srl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/list_item_movie" />


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>