<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.demo.moviebag.viewmodels.MovieDetailViewModel" />

        <variable
            name="movie"
            type="com.demo.moviebag.models.Movie" />

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl"
        isRefreshing="@{viewModel.isLoading()}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.HomeActivity">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMovie"
                setImageUrl="@{movie.wideImage}"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_230sdp"
                android:background="@color/blue_dark"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <com.google.android.material.card.MaterialCardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_210sdp"
                    app:cardBackgroundColor="@color/white">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_40sdp"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            app:layout_constraintStart_toEndOf="@+id/tvMovieName"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/img_heart" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvMovieName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_marginEnd="@dimen/_50sdp"
                            android:layout_weight="1"
                            android:text="@{movie.title}"
                            android:textAppearance="@style/TextStyleBold"
                            android:textColor="?colorOnBackground"
                            android:textSize="@dimen/_17sdp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="The Movie" />

                        <androidx.appcompat.widget.AppCompatRatingBar
                            android:id="@+id/ratingBar"
                            style="@style/RatingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:rating="@{movie.rating}"
                            android:scaleX="1.6"
                            android:scaleY="1.6"
                            app:layout_constraintStart_toStartOf="@+id/tvMovieName"
                            app:layout_constraintTop_toBottomOf="@+id/tvMovieName" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvRating"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_45sdp"
                            android:alpha="0.5"
                            android:text="@{``+movie.rating}"
                            android:textAppearance="@style/TextStyleMedium"
                            android:textColor="?colorOnSurface"
                            android:textSize="@dimen/_15sdp"
                            app:layout_constraintStart_toEndOf="@+id/ratingBar"
                            app:layout_constraintTop_toTopOf="@+id/ratingBar"
                            tools:text="3.5" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvLanguage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:alpha="0.5"
                            android:text="@{@string/language_str(movie.language)}"
                            android:textAppearance="@style/TextStyleMedium"
                            android:textColor="?colorOnSurface"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintEnd_toEndOf="@+id/tvMovieName"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="@+id/tvMovieName"
                            app:layout_constraintTop_toBottomOf="@+id/ratingBar"
                            tools:text="Language: English" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvReleaseDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:alpha="0.5"
                            android:text="@{@string/release_date_str(movie.releaseDate)}"
                            android:textAppearance="@style/TextStyleMedium"
                            android:textColor="?colorOnSurface"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintEnd_toEndOf="@+id/tvLanguage"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/tvMovieName"
                            app:layout_constraintTop_toBottomOf="@+id/tvLanguage"
                            tools:text="Release Date: June 1" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvReleaseStatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:alpha="0.5"
                            android:text="@string/release_status"
                            android:textAppearance="@style/TextStyleMedium"
                            android:textColor="?colorOnSurface"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/tvMovieName"
                            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDate" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvReleaseStatusValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:alpha="0.8"
                            android:text="@{movie.status}"
                            android:textAppearance="@style/TextStyleMedium"
                            android:textColor="?colorSecondary"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/tvReleaseStatus"
                            app:layout_constraintStart_toEndOf="@+id/tvReleaseStatus"
                            app:layout_constraintTop_toTopOf="@+id/tvReleaseStatus"
                            tools:text="Released" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/synopsisHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/synopsis"
                            android:textAppearance="@style/TextStyleSemiBold"
                            android:textColor="?colorOnSurface"
                            android:textSize="@dimen/_13sdp"
                            app:layout_constraintStart_toStartOf="@+id/tvMovieName"
                            app:layout_constraintTop_toBottomOf="@+id/tvReleaseStatus" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvSynopsis"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:alpha="0.5"
                            android:text="@{movie.overview}"
                            android:textAppearance="@style/TextStyleMedium"
                            android:textColor="?colorOnSurface"
                            android:textSize="@dimen/_12sdp"
                            app:layout_constraintEnd_toEndOf="@+id/tvReleaseDate"
                            app:layout_constraintStart_toStartOf="@+id/synopsisHeading"
                            app:layout_constraintTop_toBottomOf="@+id/synopsisHeading"
                            tools:text="@string/dummy" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/productionHouseHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/production_house"
                            android:textAppearance="@style/TextStyleSemiBold"
                            android:textColor="?colorOnSurface"
                            android:textSize="@dimen/_13sdp"
                            app:layout_constraintStart_toStartOf="@+id/tvSynopsis"
                            app:layout_constraintTop_toBottomOf="@+id/tvSynopsis" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvProductionHouse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:clipToPadding="false"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintStart_toStartOf="@+id/synopsisHeading"
                            app:layout_constraintTop_toBottomOf="@+id/productionHouseHeading"
                            tools:listitem="@layout/list_item_production_image" />


                        <com.google.android.material.button.MaterialButton
                            android:layout_marginStart="@dimen/_10sdp"
                            android:id="@+id/btCast"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:text="@string/cast"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextStyleMedium"
                            android:textSize="@dimen/_12sdp"
                            app:cornerRadius="@dimen/_8sdp"
                            app:layout_constraintEnd_toStartOf="@+id/btMedia"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/rvProductionHouse" />

                        <com.google.android.material.button.MaterialButton
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:id="@+id/btReview"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:text="@string/review"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextStyleMedium"
                            android:textSize="@dimen/_12sdp"
                            app:cornerRadius="@dimen/_8sdp"
                            app:layout_constraintBottom_toBottomOf="@+id/btCast"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/btMedia"
                            app:layout_constraintTop_toTopOf="@+id/btCast" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btMedia"
                            android:layout_marginStart="@dimen/_15sdp"
                            android:layout_marginEnd="@dimen/_15sdp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:text="@string/media"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextStyleMedium"
                            android:textSize="@dimen/_12sdp"
                            app:cornerRadius="@dimen/_8sdp"
                            app:layout_constraintEnd_toStartOf="@+id/btReview"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/btCast"
                            app:layout_constraintTop_toTopOf="@+id/btCast" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/similarMoviesHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="@string/similar_movies"
                            android:textAppearance="@style/TextStyleSemiBold"
                            android:textColor="?colorOnSurface"
                            android:textSize="@dimen/_13sdp"
                            app:layout_constraintStart_toStartOf="@+id/productionHouseHeading"
                            app:layout_constraintTop_toBottomOf="@+id/btReview" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvSimilarMovies"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:orientation="horizontal"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:layout_constraintTop_toBottomOf="@+id/similarMoviesHeading"
                            tools:listitem="@layout/list_item_similar_movies" />


                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="?backgroundColor"
                            android:elevation="@dimen/_5sdp"
                            android:visibility="@{viewModel.isLoading || viewModel.isError ? View.VISIBLE : View.GONE, default = visible}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <!--<ProgressBar
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:layout_gravity="center|top"
                                android:layout_marginTop="@dimen/_50sdp" />-->

                        </FrameLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.core.widget.NestedScrollView>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_12sdp"
                android:padding="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_arrow" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>